--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 
 .f_letter, .clipart {
-    max-width:  320px;
+    width: 100%;
+    max-width:  300px;
 }
 .ligne {
     height:     10px;
@@ -8,6 +9,35 @@
 .name {
     height: 250px;
 }
-@media screen and (min-width: 560px) {
-
+.liens span {
+    font-size: 2rem;;
+}
+span.progress {
+    background-color: #98bce9;
+    /* background-color: #ea3f3b; */
+    /* background-color: #fd7e14; */
+}
+@media screen and (min-width: 768px) {
+    .techno {
+        max-width: 75%;
+    }
+    .right {
+        font-size: 1.2rem;
+    }
+}
+@media screen and (min-width: 992px) {
+    .left {
+        min-width: 25%;
+    }
+    .right {
+        min-width: 75%;
+        margin-left: 1%;
+        font-size: 1.3rem;
+    }
+    .techno {
+        max-width: 50%;
+    }
+    ul {
+        max-width: 75%;
+    }
 }
