code print pdf with function loop => wip

--- a/public/css/index_php.css
+++ b/public/css/index_php.css
@@ -1,21 +1,4 @@
 
-*, :before, ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    user-select: none;
-    font-size: 0.8rem;
-}
-body {
-    width: 100vw;
-    margin: auto;
-    display: flex;
-    color: #00000080;
-}
 td {
     padding: 0 1%;    
 }
@@ -23,23 +6,17 @@ td {
 .left {
     background-color: burlywood;
     width: 30%;
-    
 }
-.name {
-    font-size: 1.5em;
-}
-
 ul {
     list-style: none;
 }
 a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.5);
-
+    color: black;
 }
-.f_letter {
-    width: 100%;
-    max-width:  300px;
+.clipart {
+    width: 320px;
+    text-align: center;
 }
 .ligne {
     height:     10px;
@@ -67,18 +44,17 @@ hr {
     margin: 1% 0;
     border-color: rgba(150, 150, 150);
 }
-.techno, .study, .exp {
-    max-height: 275px;
-    /* display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; */
-}
 .progress {
-    background-color: rgba(150, 150, 150);
+    background-color: rgb(150, 150, 150);
+    color: aliceblue;
+
 }
 .right ul {
     margin: 2% 0;
 }
 .titre_uppercase {
     text-transform: uppercase;
+}
+.svg {
+    width: 10px;
 }
